--- a/index.css
+++ b/index.css
@@ -58,6 +58,11 @@ body{
 }
 
 
+.addCard ul{
+    border-top: 1px solid;
+}
+
+
     #section__productos{
         display: grid;
         gap: 10px;
@@ -103,33 +108,7 @@ body{
     color: wheat;
 }
 
-.div__prod{
-    background-color: rgb(255, 255, 255);
-    border:black solid 1px;
-    border-radius: 10px;
-    border: 3px solid;
-    color: rgb(0, 0, 0);
-    margin-top: 15px;
-    
-}
 
-.div__prod ul{
-border: solid 2px;
-border-width: 2px;
-padding: 8px;
-}
-
-.div__prod button{
-    border-radius: 5px;
-    text-align: center;
-    display: grid;
-    margin: 0 auto;
-}
-
-.div__prod li{
-    list-style-type: none;
-
-}
 
 #div__costoFinal{
     background-color: rgb(232, 200, 152);
@@ -141,5 +120,7 @@ padding: 8px;
 #calcButton{
     border-radius: 5px;
     padding: 5px;
+    background-color: black;
+    color: wheat;
     
 }
