--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ body{
 
 #formProds{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     text-align: center;
     border: solid 1px;
     padding: 20px;
@@ -124,3 +124,10 @@ body{
     color: wheat;
     
 }
+
+.buscador{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+}
+
