--- a/index.css
+++ b/index.css
@@ -3,11 +3,7 @@
     font-family: monospace;
 }
 
-body{
-    background-image: url("./img/fondoBlue.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;}
+
 
 @media (max-width:870px){
     
@@ -24,10 +20,9 @@ body{
    
     }
 
-.nav__menu{
-    display: flex;
-    color: rgb(225, 185, 86);
-}
+    
+
+
 
 .nav__ul{
     display: flex;
@@ -48,10 +43,22 @@ body{
 
 .addCard{
     width: 200px;
+    color:#000000;
+    font-weight: bolder;
+    border: solid 2px rgb(0, 0, 0) !important;
 }
 
 .addCard ul{
-    border-top: 1px solid;
+    border-top: 2px solid black;
+}
+
+.addCard img{
+    border-radius: 0px !important;
+    border: 4px solid;
+    border-bottom: none;
+    border-top: none;
+    border-width: 3px;
+    
 }
 
 
@@ -60,13 +67,13 @@ body{
         gap: 8px;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 100px;
-        
+       
     }
     #div__mostrador{
         border: solid 2px black;
         height: 205px;
         width: 350px;
-        margin-left: 30px;
+        
     }
 
     .addLogo{
@@ -76,7 +83,7 @@ body{
 
 #section__productos img{
    
-    background-color: rgb(251, 252, 253);
+   
     border-radius: 10px;
     width: 180px;
     display: flex;
@@ -84,14 +91,29 @@ body{
     
 }
 
+#priceFinal{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
 #formProds{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
-    border: solid 1px;
+    border: solid 2px rgb(8, 8, 8);
     padding: 20px;
-   
-    background-color: rgb(115, 193, 245);
+    border-radius: 5px;   
+    color: #000000;
+    margin-left: 60px;
+    background-color: #b8b8b8;
+}
+
+#formProds input{
+    border-radius: 3px;
+    border: 1px #2c2c2b solid;
+    background-color: #EEEEEE;
 }
 
 .form__section{
@@ -103,16 +125,23 @@ body{
 
 .form__section input{
     margin-bottom: 10px;
-   border-radius: 10px;
+   border-radius: 3px;
    border-color: rgb(187, 187, 187);
+   background-color: rgb(211, 191, 191);
 }
 
 
 #div__costoFinal{
-    background-color: rgb(232, 200, 152);
+    background-color: #EEEEEE;
     border: solid 1px black;
+    color: #000000;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 0px !important;
+}
+
+#div__costoFinal button{
+    
+    border-radius: 0px !important;
 }
 
 .div__buscador input{
@@ -134,19 +163,21 @@ body{
 
 .buscador{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    
+    grid-template-columns: 1fr  1fr;
+    margin-top: 90px;
 }
 
 .cardIzq{
     display: flex;
     align-items: center;
-    background-color: aliceblue;
-    border: solid 1px black;
+    background-color: #b8b8b8;
+    border: solid 1px gainsboro;
     border-radius: 5px;
+    color: #000000;
+   
 }
 
 .cardIzq img{
     width: 100px;
-    
+   
 }
